--- a/SCRIPTS/CSS/floaters.css
+++ b/SCRIPTS/CSS/floaters.css
@@ -12,8 +12,8 @@
 }
 
 .float-logo-rectangle {
-    width: 25em;
-    height: 7em;
+    width: 18em;
+    height: 5.5em;
 
     object-fit: contain;
     user-select: none;
